introduce super class